Fill DESCRIBE ME in main.tex
- Section 'Verwendete Technologien' filled.

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -389,17 +389,29 @@ Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
     Bei jQuery\footnote{\url{https://jquery.com/}} handelt es sich um eine beliebte JavaScript Bibliothek,
     die die Manipulation und das Durchsuchen des DOM\footnote{\url{https://en.wikipedia.org/wiki/Document_Object_Model}} sowie
     den Umgang mit Events und Ajax\footnote{\url{https://en.wikipedia.org/wiki/Ajax_(programming)}} requests vereinfachen soll.
-\item[ace:]
-    DESCRIBE ME!
-\item[openLayers:]
-    DESCRIBE ME!
-\item[jquery-ui:]
-    %Where exactly do we use this? % FIXME
-    DESCRIBE ME!
+\item[Ace:]
+    Ace\footnote{\url{https://ace.c9.io/}} ist ein code Editor, der unsere Projekt um die Möglichkeit anreichert,
+    Markdown mit syntax highlighting und Zeilennummern einzugeben.
+\item[OpenLayers:]
+    OpenLayers\footnote{\url{http://openlayers.org/}} ist eine Bibliothek zum Umgang mit Kartenmaterial.
+    Im TranscriptionDesk Projekt benutzen wir diese Bibliothek,
+    um einzelne Scans, den Stücken einer Karte gleich, darzustellen,
+    und das verschieben und zoomen mit selbigen zu ermöglichen.
+\item[jQuery UI:]
+    Bei jQuery UI\footnote{\url{https://jqueryui.com/}} handelt es sich um eine Sammlung von Hilfsfunktionen für den Umgang mit User Interfaces.
+    Konkret findet es beim Ändern der Größe einiger Steuerelemente anwendung.
 \item[bootstrap:]
-    DESCRIBE ME!
-\item[bootbox:]
-    DESCRIBE ME!
+    Bootstrap\footnote{\url{http://getbootstrap.com/}} ist ein populäres HTML, CSS und JavaScript Framework,
+    das grundlegende Elemente zur Gestaltung der Website liefert, die in allen gängigen Browsern bereits auf kompatibilität geprüft wurden.
+\item[bootbox.js:]
+    Bootbox.js\footnote{\url{http://bootboxjs.com/}} ist eine kompakte JavaScript Bibliothek,
+    die Bootstrap um Möglichkeiten ergänzt,
+    einfach Dialogboxen zu erstellen und die Reaktionen von Nutzern auf diese zu verarbeiten.
+\item[require.js:]
+    Require.js\footnote{\url{http://www.requirejs.org/}} bietet ein Modulsystem für JavaScript,
+    dass sich vom Browser aus benutzen lässt.
+    Nebeneffekte von Require.js sind, dass sich der Code später leicht minifizieren lässt,
+    und asynchron geladen werden kann.
 \end{description}
 \subsection{Datenbank}
 In diesem Abschnitt widmen wir uns dem Aufbau der Datenbank.
