update Projektverlauf bis 1. MST

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -530,44 +530,15 @@ In den folgenden Projektwochen konnten die Probleme mit Docker in der Virtualbox
 Dieses sollte sich gerade unter Windows einfacher einrichten lassen und somit das Projekt kaum verzögern.
 Parallel dazu wurde von Herrn Koentges gefordert, alle finalen Transkriptionen im Markdown-Format automatisiert auf GitHub zu speichern und
 die in den Scans verwendeten handschriftlichen Sondersymbole durch ein MUFI-Eingabesystem in utf-8 abzuspeichern.
-Diese Ideen übernahmen wir in den Anforderungskatalog und fügten sie agil dem ersten Meilenstein hinzu.\\
+Diese Ideen übernahmen wir in den Anforderungskatalog und fügten sie agil dem zweiten Meilenstein hinzu.\\
+In dieser Zeit schlossen wir auch den ersten Meilenstein mit einem Prototypen der Plattform ab. 
+Mit diesem war es bereits möglich, sich über GitHub als Nutzer zu registrieren, eine Demo von OpenLayers zu betrachten und 
+auf einer Grafik Areas of Interest zu markieren, die jedoch noch nicht gespeichert wurden. 
+Zusätzlich dazu war im Hintergrund schon die Verbindung zu Omeka eingerichtet und es war möglich, 
+Daten zu crawlen und in einer Liste zusammenzufassen. Der gesamte Prototyp lief in einem Vagrant Container.\\
 %Jakob zu openSeadragon befragen
 %später nochmal was zu open layers, welches Problem hatten wir
-
-Am 8. Juli beschlossen wir,
-Transkriptionen bei Konsens auf GitHub zu stellen.
-Die URNs sollten dabei als Dateinamen dienen.
-Beteiligte Nutzer sollen im Commit erwähnt werden.
-Das betrifft all jene,
-welche die Transkription erstellt,
-oder sie abgesegnet haben.
-Thomas Gedanke dazu ist,
-dass es zur Absicherung einer fertigen Transkription reicht,
-wenn fünf Nutzer meinen,
-alles wäre korrekt,
-oder wenn dies von einem Admin bestätigt wird.
-Für uns ergibt sich daraus die Anforderung,
-einen isAdmin-Flag in die Nutzerbasis einzubauen.
-Es gab auch Überlegungen zum Motivationssystem,
-wodurch ins Gespräch kam,
-dass Nutzer mit einer gewissen Anzahl an fertiggestellten
-Tasks ebenfalls wie Administratoren gewertet werden könnten.
-Auch CTS URNs wurden uns für unsere Scans zugänglich gemacht.
-Wir überlegten,
-wie wir uns diese in Omeka zunutze machen könnten
-und dachten dabei an Dublin Core und Google Fusion.
-Zusätzlich kam die Idee auf,
-die Dateinamen zu diesen URNs hinzuzufügen,
-um die Erkennung unserer Inhalte zu erleichtern.
-Dann besprachen wir Baustellen für unseren nächsten Meilenstein,
-konnten zu diesem Zeitpunkt jedoch nur das abspeichern von Areas of Interests,
-sowie ein Bewertungssystem von Interest Maps und eine Eingabemaske für MUFI-Symbole festmachen.
-Noch wussten wir auch nicht,
-wie wir den Nutzern Scans anbieten sollten.
-Die erste Idee war es,
-sowohl eine Möglichkeit zur gezielten suche nach Scans einzubauen,
-sowie auch eine Möglichkeit,
-einen zufälligen Scan zur Arbeit gegeben zu bekommen. \\
+%Verlauf des mufi-input systems
 
 %erster Meilenstein, Zwischenstand
 
